--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,6 @@ homepage = ""
 repository = "https://github.com/aldarons-tech/cargo-gsp"
 
 [dependencies]
-ami = "0.3.0"
+aci_png = "^0.1"
+ami = "^0.3"
+libc = "^0.2"
