--- a/examples/minimal/Cargo.toml
+++ b/examples/minimal/Cargo.toml
@@ -7,6 +7,7 @@ homepage = "at.plopgrizzly.tech"
 
 [dependencies]
 window = { path = "../../" }
+aci_png = "^0.2"
 
 [build-dependencies]
 res = "0.2.0"
