--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,51 @@
+# Aldaron's Window Interface                                                   #
+# Copyright (c) 2017 Plop Grizzly, Jeron Lau <jeron.lau@plopgrizzly.com>       #
+# Licensed under the MIT LICENSE                                               #
+#                             _        _                                       #
+#                            /@\——————/@\                                      #
+# .———  .                   |   o    o   |     .————      .            .       #
+# |   | |  .———   .———   .——.     []     .——.  |      .——    ———: ———: | .   . #
+# |   | |  |   |  |   |  \   \   <##>   /   /  |      |   |    /    /  | |   | #
+# |———  |  |   |  |   |   |   ¯        ¯   |   |   -- |   |   /    /   |  \ /  #
+# |     |  |   |  |———    |                |   |    | |   |  /    /    |   |   #
+# |     |   ———   |       |                |    ————  |   | :——— :———  |   |   #
+#                 |        \              /                              __/   #
+#                           ¯————————————¯                                     #
+# Cargo.toml                                                                   #
+
+################################################################################
+
 [package]
-name = "window"
+name = "awi"
 version = "0.1.0"
-authors = ["Jeron Aldaron Lau <jeron.lau@plopgrizzly.tech>"]
+authors = ["Jeron Aldaron Lau <jeron.lau@plopgrizzly.com>"]
+
+################################################################################
+
+license = "MIT"
+documentation = "https://docs.rs/awi"
+homepage = "http://plopgrizzly.com/awi"
+repository = "https://github.com/plopgrizzly/awi"
+
+################################################################################
+
+readme = "README.md"
+description = """
+    Aldaron's Window Interface is a library developed by Plop Grizzly for
+    creating a window and handling it's input.
+"""
 keywords = ["window", "graphics", "interface", "native", "ffi"]
 categories = ["gui", "os::unix-apis"]
-homepage = ""
-repository = "https://github.com/aldarons-tech/cargo-gsp"
+
+################################################################################
+
+exclude = ["examples/*", "CODE_OF_CONDUCT.md", "CONTRIBUTING.md", ".gitignore"]
+
+################################################################################
 
 [dependencies]
 aci_png = "^0.2"
 ami = "^0.4"
 libc = "^0.2"
+
+################################################################################
