--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,8 +44,10 @@ exclude = ["examples/*", "CODE_OF_CONDUCT.md", "CONTRIBUTING.md", ".gitignore"]
 ################################################################################
 
 [dependencies]
-aci_png = "^0.2"
-ami = "^0.4"
+aci_png = "^0.3"
+afi = "^0.1"
+afi_docf = "^0.0"
+ami = "^0.5"
 libc = "^0.2"
 
 ################################################################################
