Updated aci_png & renamed get_dimensions to wh.

--- a/examples/minimal/Cargo.toml
+++ b/examples/minimal/Cargo.toml
@@ -6,7 +6,7 @@ build = "build.rs"
 
 [dependencies]
 awi = { path = "../../" }
-aci_png = "0.3.0"
+aci_png = "^0.5"
 
 [build-dependencies]
 res = "0.2.0"
