--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 # Aldaron's Window Interface                                                   #
-# Copyright (c) 2017 Plop Grizzly, Jeron Lau <jeron.lau@plopgrizzly.com>       #
+# Copyright (c) 2017-2018 Jeron Aldaron Lau <jeron.lau@plopgrizzly.com>        #
 # Licensed under the MIT LICENSE                                               #
 #                             _        _                                       #
 #                            /@\——————/@\                                      #
@@ -18,7 +18,9 @@
 [package]
 name = "awi"
 version = "0.1.0"
-authors = ["Jeron Aldaron Lau <jeron.lau@plopgrizzly.com>"]
+authors = [
+	"Jeron Aldaron Lau <jeron.lau@plopgrizzly.com>"
+]
 
 ################################################################################
 
@@ -39,7 +41,10 @@ categories = ["gui", "os::unix-apis"]
 
 ################################################################################
 
-exclude = ["examples/*", "CODE_OF_CONDUCT.md", "CONTRIBUTING.md", ".gitignore"]
+exclude = [
+	"examples/*", "CODE_OF_CONDUCT.md", "CONTRIBUTING.md", ".gitignore",
+	"_config.yml", "ISSUE_TEMPLATE.md", "icon.png", "icon.ico"
+]
 
 ################################################################################
 
