--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,5 +54,6 @@ afi = "^0.3.1"
 afi_docf = "^0.0"
 ami = "^0.5"
 libc = "^0.2"
+stick = "^0.1"
 
 ################################################################################
