--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,7 @@ exclude = [
 ################################################################################
 
 [dependencies]
-afi = "^0.3.1"
+afi = { path = "../afi" } # "^0.3.1"
 afi_docf = "^0.0"
 libc = "^0.2"
 stick = "^0.3"
