--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,9 +30,11 @@ categories = ["gui", "hardware-support", "os", "rendering"]
 [dependencies]
 afi = "0.7"
 stick = "0.4"
-
-# Unix: Runtime Link to xcb,
-[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "freebsd", target_os = "dragonfly", target_os = "bitrig", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
+# Vec3s and Mat4s
+euler = "0.4"
+cgmath = "0.16" # Version depended on by euler
+libc = "0.2"
+# Runtime linking.
 dl_api = "0.2"
 
 # Windows: Compiletime link to winapi
