--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ keywords = ["window", "graphics", "interface", "native", "ffi"]
 categories = ["gui", "hardware-support", "os", "rendering"]
 
 [dependencies]
-afi = "0.7"
+afi = { path = "../afi"} # "0.7"
 stick = "0.4"
 # Vec3s and Mat4s
 euler = "0.4"
@@ -36,10 +36,19 @@ cgmath = "0.16" # Version depended on by euler
 libc = "0.2"
 # Runtime linking.
 dl_api = "0.2"
+# Pure Rust Vector Graphics Rendering
+arrayvec = { version = "0.4", default-features = false }
+ordered-float = "0.5"
+approx = { version = "0.3", default-features = false }
+barg = { path = "../barg" }
 
 # Windows: Compiletime link to winapi
 [target.'cfg(target_os="windows")'.dependencies]
 winapi = { version = "0.3", features = ["winuser", "libloaderapi", "winerror", "minwindef", "errhandlingapi"] }
+
+[target.'cfg(target_arch="wasm32")'.dependencies]
+stdweb = "0.4"
+stdweb-derive = "0.4"
 
 [build-dependencies]
 webgl_generator = "0.1"
