--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,8 +31,7 @@ categories = ["gui", "hardware-support", "os", "rendering"]
 afi = { path = "../afi"} # "0.7"
 stick = "0.4"
 # Vec3s and Mat4s
-euler = "0.4"
-cgmath = "0.16" # Version depended on by euler
+ami = "0.12"
 libc = "0.2"
 # Runtime linking.
 dl_api = "0.2"
